# HomeTask

./: 2.10FilterIsUnknow.sc  2.1PascalTriangle  2.2BracketStructCheck  2.3CountChange.sc  2.4EvalRoots  2.5ReverseList.sc  2.6AddToEnd.sc  2.7CntLen  2.8SumOfList'sElem.sc  2.9FilterIsKnow.sc  3.1-3.8Sets.sc  BST.c  CMakeLists.txt  FindMaxWithStop.pas  GIF.sc  GIF.scala  README.md  TwitterScalaSchool.sc  VitASM  allFloat.c  bitOpsAddOk.c  bitOpsBang.c  bitOpsBitAnd.c  bitOpsBitXor.c  bitOpsConditional.c  bitOpsFitsBits.c  bitOpsGetByte.c  bitOpsIsPower.c  bitOpsLogicalShift.c  bitOpsSign.c  bitOpsThirdBits.c  checkEndian.c  enterChackIsArraySimmet.pas  enterCheckCountFib.pas  enterCheckCountZero.pas  enterCheckFastPower.pas  enterCheckFindSubstring.pas  enterCheckIsStrSimmet.pas  enterCheckPrintEasy.pas  exploit.c  (+15 more)
ASM/: VitASM.c  biggestPrimeDivisor.txt  cntFibSumMod2.txt  oneZeroZeroZeroOnePrime.txt
FunProg/: Lists.hs  TypeOperators.hs  sample.txt.enc  sample.txt.voc  sherlock.hs  typeClasses.hs
OS_tasks/: miniBash.c  pseudoParallel.c  pseudoParallelWithQueue.c  simpleServer.c  unstable.c
Robo/: example.js  findDiff.js  lastResult.js  test.js
Scala/: Blur_Filter.scala
Scala/Barbershop/: Barbershop.scala  CheckLog.scala
Scala/BlurFilter/: Blur_filter.scala  DrawPicture.scala  Horiz_filter.scala  ReadMe.txt  (+4 more)
russian_stemmer/: README.md  data_reader.py  runner.py  spell_corrector.py  stemmer.py
task_1/: CMakeLists.txt
task_2/: CMakeLists.txt  Task.h  Thread_joiner.h  Thread_pool.h  Threadsafe_queue.h  Work_stealing_queue.h  thread_pool_tests.cpp
(+9 files in other folders)
